syntax = "proto3";

package students;
import "google/protobuf/empty.proto";


service StudentLookup {
  rpc StreamStudent(stream Roll) returns (stream Student) {}
  rpc AddStudent(Student) returns (google.protobuf.Empty) {}
}

message Student {
  string name = 1;
  string registration = 2;
  int64 roll = 3;
}

message Roll { 
  int64 roll = 1; 
  string traceObj = 2;
}
